<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ejang.foodwatch.Activities.BrowseActivity"
    android:orientation="vertical"
    android:background="@color/colorGreyBackground"
    android:id="@+id/content_browse_layout">

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:orientation="horizontal" android:layout_width="match_parent"-->
        <!--android:background="@color/colorGreyBackground"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/search_options"-->
        <!--android:layout_marginTop="74dp"-->
        <!--&gt;-->

        <!--<Button-->
            <!--android:id="@+id/button_filter_search"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_below="@+id/restaurants_search"-->
            <!--android:layout_weight="1"-->
            <!--android:text="Filter"-->
            <!--android:textAllCaps="false"-->
            <!--android:textSize="16sp"-->
            <!--android:textColor="@color/colorWhite"-->
            <!--android:background="@drawable/button_ripple_effect"-->
            <!--/>-->
        <!--&lt;!&ndash;android:layout_marginLeft="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginRight="3dp"&ndash;&gt;-->
        <!--<ImageView-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@color/colorGreyBackground"/>-->

        <!--<Button-->
            <!--android:id="@+id/button_sort_search"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Order"-->
            <!--android:textAllCaps="false"-->
            <!--android:textSize="16sp"-->
            <!--android:layout_below="@+id/restaurants_search"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:textColor="@color/colorWhite"-->
            <!--android:background="@drawable/button_ripple_effect"/>-->

    <!--</LinearLayout>-->

    <TextView
        android:id="@+id/listview_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textSize="16sp"
        android:background="@drawable/browse_header"
        android:textColor="@color/colorWhite"
        android:ellipsize="end"
        android:maxLines="1"
        android:gravity="center"
        android:layout_marginTop="74dp"/>

    <LinearLayout
        android:id="@+id/_restaurant_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/listview_caption">

        <RelativeLayout
            android:id="@+id/restaurant_listview_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/listview_caption"
            android:background="@color/colorWhite"
            android:layout_weight="1">

            <ListView
                android:id="@+id/restaurant_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorGreyBackground"
                android:divider="@color/colorGreyBackground"
                android:dividerHeight="2.0sp" />

            <RelativeLayout
                android:id="@+id/loadingPanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <!--<RelativeLayout-->
                <!--android:id="@+id/no_location_selected_layout"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:gravity="center"-->
                <!--android:visibility="invisible">-->

                <!--<TextView-->
                    <!--android:id="@+id/no_location_selected_text"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:gravity="center"-->
                    <!--android:textSize="18sp"-->
                    <!--android:text="No Location Selected"/>-->
            <!--</RelativeLayout>-->

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                app:backgroundTint="#FF6D00"
                android:clickable="true"
                android:scaleType="center"
                android:src="@mipmap/ic_location_found"
                app:elevation="6dp"
                app:fabSize="normal"
                app:rippleColor="#FFD180" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_third_party_attr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:background="@color/colorWhite"
            android:visibility="gone"/>

    </LinearLayout>

    <com.arlib.floatingsearchview.FloatingSearchView
        android:id="@+id/restaurants_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:floatingSearch_searchBarMarginLeft="8dp"
        app:floatingSearch_searchBarMarginTop="8dp"
        app:floatingSearch_searchBarMarginRight="8dp"
        app:floatingSearch_searchHint="Search..."
        app:floatingSearch_suggestionsListAnimDuration="250"
        app:floatingSearch_showSearchKey="false"
        app:floatingSearch_leftActionMode="showSearch"
        app:floatingSearch_close_search_on_keyboard_dismiss="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >

    </com.arlib.floatingsearchview.FloatingSearchView>

    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/transparent_grey_filter"-->
        <!--android:background="@color/colorGreyRippleLight"-->
        <!--android:alpha="0.6"-->
        <!--android:elevation="7dp"/>-->

    <TextView
        android:id="@+id/init_bubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:background="@drawable/popup_bubble"
        android:textSize="16dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_above="@+id/anchor"
        android:textColor="@color/colorWhite"
        android:text="Initializing app for first use..."
        android:elevation="10dp"
        android:visibility="gone"/>

    <View
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>


</RelativeLayout>
