<resources>
    <string name="app_name">FoodWatch</string>
    <string name="app_browse_title">Restaurants</string>
    <string name="app_about_title">About</string>

    <string name="shared_pref_fave_list">Fave List Shared Preference</string>
    <string name="faved_restaurants">Favorited Restaurants</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_update">Update data</string>
    <string name="action_filter_by_safety">Filter by safety</string>
    <string name="action_filter_by_fave">Favorites only</string>
    <string name="action_fave">Fave</string>

    <string name="url_all_inspections">http://data.surrey.ca/api/action/datastore_search?resource_id=30b38b66-649f-4507-a632-d5f6f5fe87f1&amp;limit=50000</string>

    <string name="url_all_restaurants">http://data.surrey.ca/api/action/datastore_search?resource_id=0e5d04a2-be9b-40fe-8de2-e88362ea916b&amp;limit=50000</string>

    <string name="high_hazard">High hazard</string>
    <string name="mod_hazard">Moderate hazard</string>
    <string name="low_hazard">Low hazard</string>
    <string name="unknown_hazard">Unknown hazard</string>
    <string name="num_inspections">Number of inspections: %1$s</string>
    <string name="last_inspection_date">Last inspection date: %1$s</string>

    <string name="last_refresh_time">last refresh time</string>
    <string name="last_saved_location_id">location google id</string>

    <string name="surrey_city_hall_google_id">ChIJKxKd9yrYhVQRbwajS39EVvM</string>
    <string name="title_activity_restaurant_detail">RestaurantDetailActivity</string>

    <string name="action_settings">Settings</string>
    <string name="google_api_key">ENTER YOUR API KEY HERE</string>

    <string name="intent_extra_restaurant_name">Restaurant Name</string>
    <string name="intent_extra_restaurant_lat">Restaurant Latitude</string>
    <string name="intent_extra_restaurant_long">Restaurant Longitude</string>
    <string name="intent_extra_restaurant_address">Restaurant Address</string>
    <string name="intent_extra_restaurant_hazard">Restaurant Hazard</string>
    <string name="intent_extra_restaurant_ID">Restaurant ID</string>

    <string name="about_blurb_text">Thank you for using FoodWatch Beta. &lt;br&gt;&lt;br&gt;
        This app uses restaurant and inspection data from the open data catalogue of City of Surrey.
        More cities may be added in the future. &lt;br&gt;&lt;br&gt; FoodWatch is developed by Eric Jang.
        Feel free to give feedback or report bugs through my &lt;a href=\'https://github.com/ericjang96/FoodWatch/issues\'&gt;Github Issues Page&lt;/a&gt;</string>

</resources>
