<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/restaurant_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/list_item_ripple"
        android:clickable="false"
        android:descendantFocusability="blocksDescendants"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/inspection_hazard_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_weight="1" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/restaurant_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="10"
            android:background="@color/transparent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/inspection_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:text="Inspection Date"
                android:textColor="@color/blackFont"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/inspection_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/restaurant_name"
                android:layout_marginTop="3dp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="Inspection Type"
                android:textColor="@color/greyFont"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/num_violations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/restaurant_location"
                android:layout_marginTop="3dp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="Number of Violations"
                android:textColor="@color/greyFont"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingRight="3dp"
            android:src="@mipmap/ic_right_arrow" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:background="@color/transparent"
        />
</LinearLayout>